--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "body-parser": "^1.18.3",
     "express": "^4.16.4",
+    "mongoose": "^5.3.3",
     "request": "^2.88.0",
     "twitter": "^1.7.1"
   }
